--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,5 @@ cabal.project.local~
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
+# Because of prettier in pre-commit
+node_modules/
