--- a/distiller/distiller.cabal
+++ b/distiller/distiller.cabal
@@ -32,11 +32,14 @@ library
       Paths_distiller
   hs-source-dirs:
       src
+  default-extensions:
+      OverloadedStrings
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
     , lang
-  default-language: Haskell2010
+    , text
+  default-language: GHC2021
 
 executable distiller-exe
   main-is: Main.hs
@@ -46,12 +49,15 @@ executable distiller-exe
       Paths_distiller
   hs-source-dirs:
       app
+  default-extensions:
+      OverloadedStrings
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
     , distiller
     , lang
-  default-language: Haskell2010
+    , text
+  default-language: GHC2021
 
 test-suite distiller-test
   type: exitcode-stdio-1.0
@@ -62,9 +68,12 @@ test-suite distiller-test
       Paths_distiller
   hs-source-dirs:
       test
+  default-extensions:
+      OverloadedStrings
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
     , distiller
     , lang
-  default-language: Haskell2010
+    , text
+  default-language: GHC2021
