--- a/distiller/package.yaml
+++ b/distiller/package.yaml
@@ -22,6 +22,12 @@ description: Please see the README on GitHub at <https://github.com/KubEF/distil
 dependencies:
   - base >= 4.7 && < 5
   - lang
+  - text
+
+language: GHC2021
+
+default-extensions:
+  - OverloadedStrings
 
 ghc-options:
   - -Wall
