--- a/lang/lang.cabal
+++ b/lang/lang.cabal
@@ -32,10 +32,13 @@ library
       Paths_lang
   hs-source-dirs:
       src
+  default-extensions:
+      OverloadedStrings
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
-  default-language: Haskell2010
+    , text
+  default-language: GHC2021
 
 executable lang-exe
   main-is: Main.hs
@@ -45,11 +48,14 @@ executable lang-exe
       Paths_lang
   hs-source-dirs:
       app
+  default-extensions:
+      OverloadedStrings
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
     , lang
-  default-language: Haskell2010
+    , text
+  default-language: GHC2021
 
 test-suite lang-test
   type: exitcode-stdio-1.0
@@ -60,8 +66,11 @@ test-suite lang-test
       Paths_lang
   hs-source-dirs:
       test
+  default-extensions:
+      OverloadedStrings
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
     , lang
-  default-language: Haskell2010
+    , text
+  default-language: GHC2021
