--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,7 +7,7 @@ repos:
       - id: check-yaml
       - id: fix-byte-order-marker
       - id: mixed-line-ending
-  - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v4.0.0-alpha.8
-    hooks:
-      - id: prettier
+    # - repo: https://github.com/pre-commit/mirrors-prettier
+    #   rev: v4.0.0-alpha.8
+    #   hooks:
+    #     - id: prettier
